kubernetes-manifests/deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: postgres
  namespace: foodapp-namespace
spec:
  replicas: 1
  selector:
    matchLabels:
      app: postgres
  template:
    metadata:
      labels:
        app: postgres
    spec:
      containers:
        - name: postgres
          image: postgres:13
          ports:
            - containerPort: 5432
          volumeMounts:
            - name: postgres-data
              mountPath: /var/lib/postgresql/data
          livenessProbe:
            exec:
              command: ["pg_isready", "-U", "postgres"]
            initialDelaySeconds: 10
            periodSeconds: 10
      volumes:
        - name: postgres-data
          emptyDir: {}

---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: foodapp
  namespace: foodapp-namespace
spec:
  replicas: 1
  selector:
    matchLabels:
      app: foodapp
  template:
    metadata:
      labels:
        app: foodapp
    spec:
      containers:
        - name: foodapp
          image: ivamakenadjieva/kiii_foodapp_213013-app:latest
          ports:
            - containerPort: 8080
