kubernetes-manifests/services.yaml
apiVersion: v1
kind: Service
metadata:
  name: foodapp-service
  namespace: foodapp-namespace
spec:
  type: NodePort
  ports:
    - port: 8080
      targetPort: 8080
      nodePort: 30080
  selector:
    app: foodapp

---
apiVersion: v1
kind: Service
metadata:
  name: db-service
  namespace: foodapp-namespace
spec:
  ports:
    - port: 5432
      targetPort: 5432
  selector:
    app: postgres
