kubernetes-manifests/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: foodapp-ingress
  namespace: foodapp-namespace
  annotations:
    nginx.ingress.kubernetes.io/rewrite-target: /
spec:
  ingressClassName: nginx
  rules:
    - host: foodapp.com
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: foodapp-service
                port:
                  number: 8080
